# scaffold-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
scaffold_cli/: cli.py  scaffolder.py
scaffold_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
