[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "scaffold-cli"
version = "0.1.0"
description = "Scaffold new dev projects instantly from the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cli", "scaffold", "boilerplate", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

[project.scripts]
scaffold = "scaffold_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scaffold_cli*"]
